fix: Disable ECR

--- a/.github/workflows/ebit_test-dev-docker_build_push_and_send_dispatch_event.yml
+++ b/.github/workflows/ebit_test-dev-docker_build_push_and_send_dispatch_event.yml
@@ -33,6 +33,7 @@ jobs:
     with:
       ghcr_image_name: ghcr.io/yngvark/ebit-test:${{ github.sha }}
       ghcr_enable: true
+      aws_ecr_enable: false
       push: true
 #
 #
