feat: Add dispatch job

--- a/.github/workflows/ebit_test-dev-docker_build_push_and_send_dispatch_event.yml
+++ b/.github/workflows/ebit_test-dev-docker_build_push_and_send_dispatch_event.yml
@@ -35,48 +35,50 @@ jobs:
       ghcr_enable: true
       aws_ecr_enable: false
       push: true
-#
-#
-#  dispatch:
-#
-#    needs: docker-build-push
-#
-#    runs-on: ubuntu-latest
-#
-#    name: Trigger workflow in another repository 🛫
-#
-#    steps:
-#
-#      - name: Send dispatch event with image tag 🛫
-#        uses: peter-evans/repository-dispatch@26b39ed245ab8f31526069329e112ab2fb224588 # v2.1.1
-#        with:
-#          token: ${{ secrets.PAT_ON_MACHINE_USER_FOR_IAC_DISPATCH }}
-#          repository: ${{ env.RECEIVER_REPOSITORY }}
-#          event-type: ${{ env.IAC_ENVIRONMENT }}-${{ env.APP_NAME }}-image-tag-update
-#          client-payload: >
-#            {
-#              "image_version": "${{ needs.docker-build-push.outputs.image_version }}",
-#              "image_digest": "${{ needs.docker-build-push.outputs.image_digest }}",
-#              "sender_repository": "${{ github.repository }}",
-#              "sender_run_id": "${{ github.run_id }}",
-#              "sender_before_sha": "${{ github.event.before }}",
-#              "sender_after_sha": "${{ github.event.after }}"
-#            }
-#
-#
-#      - name: Write job summary
-#        env:
-#          # The workflow in another repository that will receive an event with the updated Docker image tag
-#          RECEIVER_WORKFLOW: ${{ env.APP_NAME }}-dev-receive_dispatch_event_and_commit_image_tag.yml
-#        run: |
-#          cat >> "$GITHUB_STEP_SUMMARY" <<EOF
-#          Repository dispatch event sent to [\`${{ env.RECEIVER_REPOSITORY }}\`](https://github.com/${{ env.RECEIVER_REPOSITORY }}/actions/workflows/${{ env.RECEIVER_WORKFLOW }}) with the following image metadata:
-#
-#          |What|Value|
-#          |-|-|
-#          |Tag|\`${{ needs.docker-build-push.outputs.image_version }}\`|
-#          |Digest|\`${{ needs.docker-build-push.outputs.image_digest }}\`|
-#
-#          This value can be used to find the image in the ECR repository in order to update [the ECS task container definition image](https://docs.aws.amazon.com/AmazonECS/latest/developerguide/task_definition_parameters.html#container_definition_image).
-#          EOF
-#
+
+
+  dispatch:
+
+    needs: docker-build-push
+
+    runs-on: ubuntu-latest
+
+    name: Trigger workflow in another repository 🛫
+
+    environment: yngvar-iac
+
+    steps:
+
+      - name: Send dispatch event with image tag 🛫
+        uses: peter-evans/repository-dispatch@26b39ed245ab8f31526069329e112ab2fb224588 # v2.1.1
+        with:
+          token: ${{ secrets.PAT_FOR_IAC_DISPATCH }}
+          repository: ${{ env.RECEIVER_REPOSITORY }}
+          event-type: ${{ env.IAC_ENVIRONMENT }}-${{ env.APP_NAME }}-image-tag-update
+          client-payload: >
+            {
+              "image_version": "${{ needs.docker-build-push.outputs.image_version }}",
+              "image_digest": "${{ needs.docker-build-push.outputs.image_digest }}",
+              "sender_repository": "${{ github.repository }}",
+              "sender_run_id": "${{ github.run_id }}",
+              "sender_before_sha": "${{ github.event.before }}",
+              "sender_after_sha": "${{ github.event.after }}"
+            }
+
+
+      - name: Write job summary
+        env:
+          # The workflow in another repository that will receive an event with the updated Docker image tag
+          RECEIVER_WORKFLOW: ${{ env.APP_NAME }}-dev-receive_dispatch_event_and_commit_image_tag.yml
+        run: |
+          cat >> "$GITHUB_STEP_SUMMARY" <<EOF
+          Repository dispatch event sent to [\`${{ env.RECEIVER_REPOSITORY }}\`](https://github.com/${{ env.RECEIVER_REPOSITORY }}/actions/workflows/${{ env.RECEIVER_WORKFLOW }}) with the following image metadata:
+
+          |What|Value|
+          |-|-|
+          |Tag|\`${{ needs.docker-build-push.outputs.image_version }}\`|
+          |Digest|\`${{ needs.docker-build-push.outputs.image_digest }}\`|
+
+          This value can be used to find the image in the ECR repository in order to update [the ECS task container definition image](https://docs.aws.amazon.com/AmazonECS/latest/developerguide/task_definition_parameters.html#container_definition_image).
+          EOF
+
